# localisation_aruco

./: .cproject  .gitignore  .project  CMakeLists.txt  FindWiringPi.cmake  cmake_install.cmake  package.xml  setup.py
arduPi/bcm2835-1.46/: Makefile  config.status
arduPi/bcm2835-1.46/doc/: Makefile
arduPi/bcm2835-1.46/src/: Makefile
config-yaml/: marker_low_res_cam_conf.yaml  reporter_conf.yaml  simu_marker_cam.yaml  simu_marker_cam2.yaml  simu_reporter.yaml
includes/: Robot.h  Robots.h
msg/: Robot.msg
simulateur_cube/: default.py  plotter_v1.py  record.py
simulateur_cube/data/club_robot/robots/: Cube.blend  Cube.blend1
simulateur_cube/scripts/: club_robot_client.py
simulateur_cube/src/club_robot/builder/robots/: Cube.py  __init__.py
simulateur_cube/src/club_robot/robots/: Cube.py
src/: BaseMarkerProcess.cpp  BaseMarkerProcess.h  Reporter.cpp  Reporter.h  RosSpectator.cpp  RosSpectator.h  Utils.cpp  Utils.h  aruco_cube.cpp  aruco_cube.h  aruco_finder.cpp  aruco_finder.h  calibration_aruco.cpp  calibration_world.cpp  cube_pose_to_uart.cpp  main.cpp  ros_aruco.cpp
src/JeVoisSpectator/: JeVoisSpectator.cpp  JeVoisSpectator.h
src/UART_interface/: main.cpp
srv/: CalibRequest.srv
